# rust-esp32-example

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  RustOnXtensa.md  sdkconfig
.cargo/: config
.github/workflows/: publish-esp-idf-rust-image.yml  publish-idf-rust-examples-image.yml  publish-idf-rust-image.yml  test-build.yml
components/clib/: CMakeLists.txt  README.md  clib.c
components/rustlib/: CMakeLists.txt  Cargo.toml  README.md  build.rs  placeholder.c  rust-toolchain.toml
components/rustlib/src/: lib.rs
docs/: rust-on-xtensa-installation-aarch64-apple-darwin.md  rust-on-xtensa-installation-x86_64-apple-darwin.md  rust-on-xtensa-installation-x86_64-pc-windows-msvc.md  rust-on-xtensa-installation-x86_64-unknown-linux-gnu-bionic.md  rust-on-xtensa-installation-x86_64-unknown-linux-gnu.md  rust-on-xtensa.md
main/: CApi.h  CMakeLists.txt  RustApi.h  main.c
rustlib/: Cargo.toml  bindings.rs  build.rs
rustlib/src/: lib.rs
support/: README.md
support/esptool/: Flash-Chip.ps1
support/idf-rust/: Dockerfile
support/idf-rust-examples/: entrypoint.sh  motd
support/llvm-project/: Dockerfile
support/llvm-project/cmake/caches/: DistributionEspressif-stage2.cmake  DistributionEspressif.cmake
support/rust/: Dockerfile
